Answer Array working and showing letters that have been added by the user

--- a/app/views/game/index.html.erb
+++ b/app/views/game/index.html.erb
@@ -3,7 +3,18 @@
 <p>
 <% @word.each do  %>
   		<%= " _ " %>
- <% end %></p>
+ <% end %>
+</p>
+
+<p>
+<%# @word.each do  %>
+  		<%# @answer.push(" _ ") %>
+ <%# end %></p>
+
+ <p>
+ <%= @answer %>
+</p>
+
 
 
 
